<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>cn.octopusyan</groupId>
        <artifactId>alist-gui</artifactId>
        <version>${gui.version}</version>
    </parent>

    <artifactId>gui</artifactId>
    <version>${gui.version}</version>
    <name>alist-gui</name>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <parent.version>${gui.version}</parent.version>

        <exec.mainClass>cn.octopusyan.alistgui.AppLauncher</exec.mainClass>
        <cssSrcPath>${project.basedir}/src/main/resources/css</cssSrcPath>
        <cssTargetPath>${project.basedir}/target/classes/css</cssTargetPath>
    </properties>

    <dependencies>

        <!-- javafx -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
        </dependency>

        <!-- https://mkpaz.github.io/atlantafx/ -->
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
        </dependency>

        <!-- slf4j -->
        <!-- https://slf4j.org/manual.html -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
        </dependency>

        <!-- common -->
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-exec</artifactId>
        </dependency>

        <!-- hutool -->
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-core</artifactId>
        </dependency>

        <!-- lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <!-- jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
        </dependency>

        <!-- https://kordamp.org/ikonli/ -->
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome-pack</artifactId>
        </dependency>
        <dependency>
            <groupId>com.gluonhq</groupId>
            <artifactId>emoji</artifactId>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>css/*.scss</exclude>
                </excludes>
            </resource>
        </resources>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- https://github.com/HebiRobotics/sass-cli-maven-plugin -->
            <plugin>
                <groupId>us.hebi.sass</groupId>
                <artifactId>sass-cli-maven-plugin</artifactId>
                <configuration>
                    <sassVersion>1.78.0</sassVersion>
                    <args> <!-- Any argument that should be forwarded to the sass cli -->
                        <arg>${cssSrcPath}/root.scss:${cssTargetPath}/root.css</arg>
                        <arg>${cssSrcPath}/root-view.scss:${cssTargetPath}/root-view.css</arg>
                        <arg>${cssSrcPath}/main-view.scss:${cssTargetPath}/main-view.css</arg>
                        <arg>${cssSrcPath}/setup-view.scss:${cssTargetPath}/setup-view.css</arg>
                        <arg>${cssSrcPath}/about-view.scss:${cssTargetPath}/about-view.css</arg>
                        <arg>${cssSrcPath}/admin-panel.scss:${cssTargetPath}/admin-panel.css</arg>
                        <arg>--no-source-map</arg>
                    </args>
                </configuration>
                <executions>
                    <execution>
                        <id>sass-exec</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <launcher>alistgui</launcher>
                    <jlinkImageName>app</jlinkImageName>
                    <jlinkZipName>app</jlinkZipName>
                    <mainClass>cn.octopusyan.alistgui/${exec.mainClass}</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <stripDebug>true</stripDebug>
                            <compress>2</compress>
                            <noHeaderFiles>true</noHeaderFiles>
                            <noManPages>true</noManPages>
                            <launcher>alist-gui</launcher>
                            <jlinkImageName>app</jlinkImageName>
                            <jlinkZipName>app</jlinkZipName>
                            <mainClass>cn.octopusyan.alistgui/${exec.mainClass}</mainClass>
                            <options>
                                <option>--enable-preview</option>
<!--                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005</option>-->
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- https://github.com/fvarrui/JavaPackager -->
            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                    <bundleJre>true</bundleJre>
                    <generateInstaller>false</generateInstaller>
                    <copyDependencies>true</copyDependencies>
                    <assetsDir>${project.basedir}/src/main/resources/assets</assetsDir>
                    <vmArgs>
                        <arg>--enable-preview</arg>
                        <arg>-Xmx100m</arg>
                    </vmArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <platform>windows</platform>
                            <zipballName>${project.name}-windows</zipballName>
                            <createZipball>true</createZipball>
                            <winConfig>
                                <headerType>gui</headerType>
                                <generateMsi>false</generateMsi>
                            </winConfig>
                            <additionalResources>
                                <additionalResource>${project.basedir}/src/main/resources/static/upgrade.exe
                                </additionalResource>
                            </additionalResources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>windows-nojre</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <zipballName>${project.name}-windows-nojre</zipballName>
                            <platform>windows</platform>
                            <createZipball>true</createZipball>
                            <bundleJre>false</bundleJre>
                            <winConfig>
                                <headerType>gui</headerType>
                                <generateMsi>false</generateMsi>
                            </winConfig>
                            <additionalResources>
                                <additionalResource>${project.basedir}/src/main/resources/static/upgrade.exe
                                </additionalResource>
                            </additionalResources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>exe</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <encoding>UTF-8</encoding>
                            <!--打成jar包后复制到的路径-->
                            <outputDirectory>../target</outputDirectory>
                            <resources>
                                <resource>
                                    <!--项目中需要复制的文件路径-->
                                    <directory>${project.basedir}/target</directory>
                                    <includes>
                                        <include>*.zip</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>